<com.sothree.slidinguppanel.SlidingUpPanelLayout
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sliding_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    sothree:umanoPanelHeight="0dp"
    sothree:umanoShadowHeight="4dp"
    sothree:umanoFadeColor="@android:color/transparent"
    android:background="@color/lightGrey">


    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        >

        <com.example.frank.busmap.CustomInfoWindow.MapWrapperLayout
            android:id="@+id/map_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <fragment
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.example.frank.busmap.MainActivity" />

            <include
                layout="@layout/activity_maps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </com.example.frank.busmap.CustomInfoWindow.MapWrapperLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp">
        <include
            android:id="@+id/choice_A"
            layout="@layout/panel_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:visibility="invisible"
            />

        <include
            android:id="@+id/choice_B"
            layout="@layout/start_algorithm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="51dp"
            android:visibility="invisible"
            />
    </RelativeLayout>
</com.sothree.slidinguppanel.SlidingUpPanelLayout>