...


    <!--<android.support.design.widget.FloatingActionButton-->
    <!--android:id="@+id/fab_back"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignLeft="@+id/fab_direction"-->
    <!--android:layout_alignStart="@+id/fab_direction"-->

    <!--android:layout_gravity="top"-->
    <!--android:src="@drawable/back_arrow_24dp"-->
    <!--android:visibility="invisible"-->
    <!--app:elevation="6dp"-->
...
