...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <AutoCompleteTextView
        android:id="@+id/busNumber"
        android:layout_width="169dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="108dp"
        android:layout_marginStart="108dp"
...
